@@ -69,6 +69,9 @@ div#navigation table {
 <div class="ulist">
 <ul>
 <li>
+<p>Added ASYNC_MQTT_BUILD_EXAMPLES_SEPARATE option to enable library separate build example. #359</p>
+</li>
+<li>
 <p>Fixed TLS timeout logic. #357</p>
 </li>
 <li>
