@@ -194,6 +194,10 @@ pre.rouge .ss {
 <td class="tableblock halign-left valign-top"><p class="tableblock">Build examples</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">ASYNC_MQTT_BUILD_EXAMPLES_SEPARATE</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Build examples for separate library build. It requires much memory.</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">ASYNC_MQTT_BUILD_LIB</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Build separate compiled library</p></td>
 </tr>
