@@ -16,9 +16,10 @@ if("cxx_std_20" IN_LIST CMAKE_CXX_COMPILE_FEATURES)
         cl_cpp20coro_mqtt_sub.cpp
         ep_cpp20coro_mqtt_client.cpp
     )
-
-    add_subdirectory(separate_client)
-    add_subdirectory(separate_endpoint)
+    if(ASYNC_MQTT_BUILD_EXAMPLE_SEPARATE)
+        add_subdirectory(separate_client)
+        add_subdirectory(separate_endpoint)
+    endif()
 endif()
 
 if(ASYNC_MQTT_USE_TLS)
